force-app/main/default/objects/Account/fields/ALK_Autorization_habeas_data__c.field-meta.xml
<CustomField>
    <fullName>ALK_Autorization_habeas_data__c</fullName>
    <label>Autorización de habeas data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>SIN AUTORIZACIÓN</fullName>
                <default>true</default>
                <label>SIN AUTORIZACIÓN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>