force-app/main/default/objects/Account/fields/ALK_Customer_has_no_email__c.field-meta.xml
<CustomField>
    <fullName>ALK_Customer_has_no_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente no reporta correo</label>
    <type>Checkbox</type>
</CustomField>