force-app/main/default/objects/Account/fields/ALK_Do_Not_Send_Emails__c.field-meta.xml
<CustomField>
    <fullName>ALK_Do_Not_Send_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No recibir correos eletrónicos</label>
    <type>Checkbox</type>
</CustomField>