force-app/main/default/objects/Account/fields/ALK_Identification_Id__c.field-meta.xml
<CustomField>
    <fullName>ALK_Identification_Id__c</fullName>
    <externalId>true</externalId>
    <label>Id de Identificación</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>