force-app/main/default/objects/Account/fields/ALK_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>ALK_Identification_Number__c</fullName>
    <label>Número de identificación</label>
    <length>15</length>
    <type>Text</type>
</CustomField>