force-app/main/default/objects/Account/fields/ALK_Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>ALK_Identification_Type__c</fullName>
    <label>Tipo identificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cedula de ciudadanía</fullName>
            </value>
            <value>
                <fullName>Cedula de Extranjería</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>Tarjeta de identidad</fullName>
            </value>
            <value>
                <fullName>NIT</fullName>
            </value>
            <value>
                <fullName>RUT</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>