force-app/main/default/objects/Account/fields/ALK_Identification_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>ALK_Identification_Type_Code__c</fullName>
    <formula>CASE(ALK_Identification_Type__c, 
&quot;Cedula de ciudadanía&quot;, &quot;C&quot;,
&quot;Cedula de Extranjería&quot;, &quot;E&quot;,
&quot;Pasaporte&quot;, &quot;PA&quot;,
&quot;Tarjeta de identidad&quot;, &quot;TI&quot;,
&quot;Nit&quot;, &quot;N&quot;,
&quot;RUT&quot;, &quot;R&quot;,
&quot;PE&quot;, &quot;V&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo do tipo de identificación</label>
    <type>Text</type>
</CustomField>