force-app/main/default/objects/Account/fields/ALK_Second_Phone__c.field-meta.xml
<CustomField>
    <fullName>ALK_Second_Phone__c</fullName>
    <label>Teléfono 2</label>
    <type>Phone</type>
</CustomField>