force-app/main/default/objects/Account/fields/ALK_SMS__c.field-meta.xml
<CustomField>
    <fullName>ALK_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>