force-app/main/default/objects/Account/fields/ALK_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>ALK_Whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whatsapp</label>
    <type>Checkbox</type>
</CustomField>