force-app/main/default/objects/Account/recordTypes/ALK_Partner.recordType-meta.xml
<RecordType>
    <fullName>ALK_Partner</fullName>
    <active>true</active>
    <label>Aliados</label>
</RecordType>