force-app/main/default/objects/Account/validationRules/Duplicate_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Duplicate_Account__c  = TRUE,  
NOT(ISBLANK( ALK_Identification_Number__c ))
)</errorConditionFormula>
    <errorDisplayField>ALK_Identification_Number__c</errorDisplayField>
    <errorMessage>Duplicate value found for this account</errorMessage>
</ValidationRule>