force-app/main/default/objects/Account/validationRules/Required_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 RecordType.DeveloperName = &apos;PersonAccount&apos;,
 ALK_Email__c = TRUE,
 ISBLANK(PersonEmail) 
)</errorConditionFormula>
    <errorDisplayField>PersonEmail</errorDisplayField>
    <errorMessage>Por favor complete el correo electrónico.</errorMessage>
</ValidationRule>