force-app/main/default/objects/Account/validationRules/Required_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 RecordType.DeveloperName = &apos;PersonAccount&apos;,
 ISBLANK( Phone ), 
OR (
 ALK_SMS__c = TRUE,
 ALK_Whatsapp__c = TRUE
)
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Por favor complete el teléfono.</errorMessage>
</ValidationRule>