force-app/main/default/objects/Account/listViews/ALK_Partner.listView-meta.xml
<ListView>
    <fullName>ALK_Partner</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.ALK_Partner</value>
    </filters>
    <label>Aliados</label>
    <sharedTo>
        <role>ALK_GERENTES_DIRECTORES_Y_JEFES</role>
    </sharedTo>
</ListView>