force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ALK_Identification_Number__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ALK_Autorization_habeas_data__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Cuentas</label>
</ListView>